--- a/apps/web/src/ris/index.css
+++ b/apps/web/src/ris/index.css
@@ -25,5 +25,4 @@ body {
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  zoom: 1.07;
 }
